# quad-locomotion-deployment

./: .gitignore  LICENSE  README.md  setup_scene.py  setup_scene_rough.py
src/quad_controller/: CMakeLists.txt  package.xml
src/quad_controller/include/quad_controller/: cuda_raii.hpp  observation_builder.hpp  policy_engine.hpp  policy_types.hpp
src/quad_controller/models/: policy.onnx
src/quad_controller/src/: benchmark.cpp  observation_builder.cpp  policy_engine.cpp  quad_node.cpp  waypoint_navigator.cpp
src/quad_controller/test/: test_observation_builder.cpp
