<?xml version="1.0"?>
<package format="3">
  <name>quad_controller</name>
  <version>0.1.0</version>
  <description>Closed-loop TensorRT locomotion controller driving Anymal in Isaac Sim</description>
  <maintainer email="you@example.com">varun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
